# dusty_colors

./: .gitignore  AGENTS.md  DESIGN.md  README.md  environment.yml  paper.tex  pyproject.toml
configs/analyses/: clauds_sextractor_nir_default.yaml  clauds_sextractor_nir_default_rand100.yaml  clauds_sextractor_optical_default.yaml  clauds_sextractor_optical_default_rand100.yaml  dp1_blue.yaml  dp1_default.yaml  dp1_default_norand.yaml  dp1_default_pai24.yaml  (+25 more)
notebooks/: calculate_dust_mass.ipynb  create_d1_catalog.ipynb  dp1_inner_bin_appendix_stamp_grid.ipynb  dp1_inner_bin_color_split_bias.ipynb  dp1_inner_bin_postage_stamps.ipynb  dp1_magnification_bias_estimate.ipynb  dp1_photoz_selection.ipynb  dp1_stack.ipynb  dp1_stack_flip.ipynb  plot_Av.ipynb  plot_catalogs.ipynb  plot_cleaning.ipynb  plot_jackknife_regions.ipynb  plot_jackknives.ipynb  plot_results.ipynb  plot_treecorr_stacks.ipynb
scripts/: analyses.py  build_dp1_inner_pair_table.py  build_kcorrect_broad.py  download_clauds.py  download_rubin_bandpasses.py  download_rubin_dp1.py  exploring_variants.py  jackknife.py  main_analyses.py  process_dp1.py  query_dp1.py  run_stack.py  run_treecorr.py
tests/: test_analysis_catalog_stats.py  test_build_kcorrect_broad.py  test_catalog_sample_slice.py  test_clauds_smoke.py  test_color_power_law_fit.py  test_color_split_bias.py  test_config_pipeline.py  test_download_clauds.py  test_download_rubin_bandpasses.py  test_download_rubin_dp1.py  test_dust_extinction_fit.py  test_plotting.py  test_postage_stamps.py  test_sources.py  test_treecorr_stacker_multibin.py
(+49 files in other folders)
